--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-icons": "^4.4.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
     "react-social-icons": "^5.13.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
